# UncertainSCI-web-demo

./: .gitignore  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.md  README.rst  setup.cfg
bundles/desktop/macOS/: setup.py
bundles/desktop/windows/: README.md  create_exe.bat  run.py
bundles/docker/: README.md  SERVER_SETUP.md
bundles/docker/scripts/: build_image.sh  build_server.sh  run_image.sh
bundles/docker/setup/: apps.yml  requirements.txt
examples/jupyter/: show.ipynb
uncertainsci_web_demo/: __init__.py
uncertainsci_web_demo/app/: controller.py  core.py  engine.py  engine_template.py  jupyter.py  main.py  pce_builder.py  state_defaults.py  state_manager.py  ui.py
