[metadata]
name = uncertainsci-web-demo
version = 1.0.0
description = a demonstration of UncertainSCI deployed on the web
long_description = file: README.rst
author = UncertainSCI Developers
license = MIT License
classifiers =
    Development Status :: 1 - Planning
    Environment :: Web Environment
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: JavaScript
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
keywords =
    Python
    Interactive
    Web
    Application
    Framework

[options]
packages = find:
include_package_data = True
install_requires =
    trame
    uncertainSCI>=0.2.2b0
    wslink
    # vtk
    pandas
    # numpy
    # altair
    # mpld3
    plotly
    # simput
    # pydeck

[options.entry_points]
console_scripts =
    uncertainsci-web-demo = uncertainsci_web_demo:main
